// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAspect method for class call pattern.beforeMethod and pattern.afterMethod with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": F {
      "_value": Object {
        "x": [Function],
      },
    },
    "meta": Object {},
    "object": Object {
      "getValue": [Function],
    },
    "property": "getValue",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class call pattern.beforeMethod and pattern.afterMethod with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": F {
      "_value": Object {
        "x": [Function],
      },
    },
    "meta": Object {},
    "object": Object {
      "getValue": [Function],
    },
    "payload": Object {
      "x": [Function],
    },
    "property": "getValue",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "meta": Object {},
    "object": Object {
      "_privateMethod": [Function],
      "method": [Function],
      "superMethod": [Function],
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "meta": Object {},
    "object": Object {
      "_privateMethod": [Function],
      "method": [Function],
      "superMethod": [Function],
    },
    "payload": undefined,
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for settings constructor: true 1`] = `
Array [
  Object {
    "args": Array [
      1,
    ],
    "context": A {},
    "meta": Object {},
    "object": [Function],
    "property": "constructor",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for settings constructor: true 2`] = `
Array [
  Object {
    "args": Array [
      1,
    ],
    "context": A {},
    "meta": Object {},
    "object": [Function],
    "payload": A {
      "variable": 1,
    },
    "property": "constructor",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for settings constructor: true and extended class 1`] = `
Array [
  Object {
    "args": Array [
      1,
    ],
    "context": B {},
    "meta": Object {},
    "object": [Function],
    "property": "constructor",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for settings constructor: true and extended class 2`] = `
Array [
  Object {
    "args": Array [
      1,
    ],
    "context": B {},
    "meta": Object {},
    "object": [Function],
    "payload": B {
      "variable": 1,
    },
    "property": "constructor",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should not call pattern.beforeMethod and pattern.afterMethod after unAop method is called 1`] = `undefined`;

exports[`createAspect method for class should not call pattern.beforeMethod and pattern.afterMethod after unAop method is called 2`] = `undefined`;

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "meta": Object {},
    "object": A {
      "variable": undefined,
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "meta": Object {},
    "object": A {
      "variable": undefined,
    },
    "payload": undefined,
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for instance should not call pattern.beforeMethod and pattern.afterMethod after unAop method is called 1`] = `undefined`;

exports[`createAspect method for instance should not call pattern.beforeMethod and pattern.afterMethod after unAop method is called 2`] = `undefined`;
